[gd_scene load_steps=4 format=3 uid="uid://d3x6tgjcyc3ge"]

[ext_resource type="Theme" uid="uid://7kt8u7jnbucu" path="res://themes/menu_theme.tres" id="1_ye57p"]
[ext_resource type="Script" path="res://scenes/HUD/Menus/pause_menu.gd" id="2_trh3q"]
[ext_resource type="PackedScene" uid="uid://clk6l0nckgyvn" path="res://scenes/HUD/Menus/settings_menu.tscn" id="3_b0not"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ye57p")
script = ExtResource("2_trh3q")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.458824)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
top_level = true
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -83.0
offset_right = 83.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Settings" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="BackToTitle" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Back to Title"

[node name="SettingsMenu" parent="." instance=ExtResource("3_b0not")]
visible = false
top_level = true
layout_mode = 1

[node name="BG" parent="SettingsMenu" index="0"]
visible = false

[connection signal="pressed" from="Panel/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/BackToTitle" to="." method="_on_back_to_title_pressed"]

[editable path="SettingsMenu"]
